--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,6 +1,6 @@
 <%- layout ('layouts/main.ejs') %>
 
-<h1 class="mt-4">Profile</h1>
+<h1 class="mt-4">Perfil</h1>
 
 <div class="card card-body">
     <h3><%= user.email%></h3>
