--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <div class="card mt-4 text-center">
-            <h3>SignIn</h3>
+            <h3>Ingresar</h3>
             <div class="card-body">
                 <form action="/signin" method="POST">
                     <div class="form-group">
