--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -10,8 +10,10 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">PetsCamp</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <a href="/">
+            <img src="http://www.petscampperu.com/wp-content/uploads/2015/05/logo-web-blanco.png"/" alt="Pets-Camp">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,17 +22,17 @@
             <ul class="navbar-nav ml-auto">
                 <% if (user) { %>
                     <li class="nav-item">
-                        <a class="nav-link" href="/profile">Profile</a>
+                        <a class="nav-link" href="/profile">Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/logout">LogOut</a>
+                        <a class="nav-link" href="/logout">Salir</a>
                     </li>
                 <% } else { %>
-                <li class="nav-item">
-                    <a class="nav-link" href="/signin">SignIn</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/signin">Ingresar</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/signup">SignUp</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/signup">Registrarse</a>
                 </li>
                 <% } %>
             </ul>
