--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,2 +1,29 @@
 <%- layout ('layouts/main.ejs') %> 
-<h1 class="mt-4">PETSCAMP</h1>
+
+<div class="container">
+    <h1 style="padding: 0px 15px; color: #73aa65;"
+        class="mt-4">PETSCAMP</h1>
+
+    <div class="row">
+        <div class="col-md-6">
+            <img style="width: 555px; height: 369px 555px; padding: 0px 15px;" 
+                src="http://www.petscampperu.com/wp-content/uploads/2015/05/hospedaje.jpg" alt="">
+        </div>
+
+        <div class="col-md-6">
+            <p class="text-center" 
+                style="padding: 0px 15px;
+                        color: #53575A;">
+                ¿En que consiste nuestro servicio de hospedaje?
+            </p>
+            <p style="text-align: justify;">
+                Brindamos alojamiento todos los días del año. Asignamos a nuestros hospedados un kennel 
+                donde podrá descansar luego de jugar y relajarse en nuestras instalaciones. Nos encargamos 
+                de darle todos los cuidados que tú le das en casa. Seguimos las indicaciones de horarios 
+                de alimentación, paseos y demás engreimientos a los que está acostumbrado, realizamos controles 
+                salud a la hora que ingresa, sale y durante su estadía. Finalmente, tratamos de que pase unos 
+                días increíbles con nosotros y con sus nuevos amigos de 4 patas!
+            </p>
+        </div>
+    </div>
+</div>
