--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -13,7 +13,7 @@
                         <input type="password" name="password" placeholder="Insert password" class="form-control">
                     </div>
                     <button type="submit" class="btn btn-success btn-block mt-4">
-                        Signup
+                        SignUp
                     </button>
                 </form>
             </div>
