--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -4,40 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Nodejs</title>
+    <title>Registro PETSCAMP</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
+
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-        <a href="/">
-            <img src="http://www.petscampperu.com/wp-content/uploads/2015/05/logo-web-blanco.png"/" alt="Pets-Camp">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <% if (user) { %>
+        <div class="container">
+            <a href="/">
+                <img src="http://www.petscampperu.com/wp-content/uploads/2015/05/logo-web-blanco.png" /"
+                    alt="Pets-Camp">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <% if (user) { %>
                     <li class="nav-item">
                         <a class="nav-link" href="/profile">Perfil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Salir</a>
                     </li>
-                <% } else { %>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/signin">Ingresar</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="/signup">Registrarse</a>
-                </li>
-                <% } %>
-            </ul>
+                    <% } else { %>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/signin">Ingresar</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/signup">Registrarse</a>
+                    </li>
+                    <% } %>
+                </ul>
+            </div>
         </div>
     </nav>
+
 
     <div class="container">
         <% if (signupMessage.length > 0) { %>
