--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -3,13 +3,8 @@
 <h1 class="mt-4">Perfil</h1>
 
 <div class="card card-body">
+    <h2><%= user.name %></h2>
     <h2><%= user.email%></h2>
-    <p> PASSWORD: <%= user.password%></p>
+    <!--<p> PASSWORD: <%= user.password%></p>-->
     <p> ID: <%= user._id %></p>
-</div>
-
-<br>
-
-<div>
-    <button type="button" class="btn btn-success">Registre a su mascota</button>
 </div>
