--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -28,6 +28,9 @@
                         <a class="nav-link" href="/profile">Perfil</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/reserva">Reserva</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/logout">Salir</a>
                     </li>
                     <% } else { %>
