--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -7,6 +7,9 @@
             <div class="card-body">
                 <form action="/signup" method="POST">
                     <div class="form-group">
+                        <input type="name" name="name" placeholder="Insert Name" class="form-control">
+                    </div>
+                    <div class="form-group">
                         <input type="email" name="email" placeholder="Insert Email" class="form-control">
                     </div>
                     <div class="form-group">
