--- a/src/views/reserva/reservas.ejs
+++ b/src/views/reserva/reservas.ejs
@@ -10,13 +10,13 @@
             <div class="card-body">
                 <form action="">
                     <div class="form-group">
-                        <input type="fechaI" placeholder="fecha Inicio" class="form-control">
+                        <input type="fechaI" name="fechaI" placeholder="dd/mm/yy" class="form-control">
                     </div>
                     <div class="form-group">
-                        <input type="fechaF" placeholder="fecha Fin" class="form-control">
+                        <input type="fechaF" name="fechaF" placeholder="dd/mm/yy" class="form-control">
                     </div>
                     <div class="form-group">
-                        <select name="" id="input">
+                        <select name="habitación" id="input">
                             <option value=""> Elegir habitación </option>
                             <option value="">H1</option>
                             <option value="">H2</option>
