--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -6,9 +6,9 @@
             <h3>Registrarse</h3>
             <div class="card-body">
                 <form action="/signup" method="POST">
-                    <div class="form-group">
-                        <input type="name" name="name" placeholder="Insert Name" class="form-control">
-                    </div>
+                   <!-- <div class="form-group">
+                        <input type="nombre" name="nombre" placeholder="Insert Name" class="form-control">
+                    </div>-->
                     <div class="form-group">
                         <input type="email" name="email" placeholder="Insert Email" class="form-control">
                     </div>
